<resources>
    <string name="app_name">Tcc Flash Cards</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Entrar</string>
    <string name="previous">Voltar</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="email">E-mail</string>
    <string name="senha">Senha</string>

    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha_esquecida">Esqueci aa senha!</string>
    <string name="todo">TODO</string>
    <string name="nome">Nome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solicitar_senha">Solicitar Nova Senha</string>
    <string name="Esqueci_senha">Esqueci a Senha</string>
    <string name="title_activity_pincipal">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="btn_configurações">Configurações</string>
    <string name="btn_novo_bararalho">Novo Baralho</string>
    <string name="perq_seutempo">Como está o seu tempo agora para estudar?</string>
    <string name="perq_seutempo_poucotempo">Com pouco tempo!</string>
    <string name="perq_seutempo_tenhotempo">Tenho tempo!</string>
    <string name="perq_seutempo_muitotempo">Estou com muito tempo!</string>
    <string name="perq_seuanimo">Como está o seu ânimo para estudar?</string>
    <string name="perq_seuanimo_Animado">Bem Animado!</string>
    <string name="perq_seuanimo_tranquilo">Tranquilo!</string>
    <string name="perq_seuanimo_desanimado">Aff! mais um dia!</string>
    <string name="config_nome_Baralho">Nome do Baralho</string>
    <string name="config_tex_tipo">Tipo do Baralho?</string>
    <string name="config_tipo_FCcomuns">Flash Cards (FC) comuns</string>
    <string name="config_tipo_FC_Idiomas">FC para idiamas</string>
    <string name="config_nome_FC_Idioma_Ingles">FC para o idioma inglês </string>
    <string name="config_alarme">Alertas</string>
    <string name="config_alarme_sem">Sem lembretes e alarmes</string>
    <string name="config_apenas_lembrete">Apenas lembretes</string>
    <string name="config_alarme_alarme">Alarme</string>
    <string name="config_aceitar">Criar baralho</string>
    <string name="config_hora">Hora do lembrete/alamerme Ex: 19:00</string>

    <string name="fc_idi_btn_iniciar">Iniciar Estudos</string>
    <string name="fc_idi_btn_add_carta">ADD Carta</string>
    <string name="fc_idi_btn_add_grupo">ADD Grupo</string>
    <string name="fc_idi_btn_conf">Config.</string>
    <string name="fc_idi_btn_editar">Editar</string>

    <string name="fc_idi_tex_estat">Estatísticas</string>
    <string name="fc_idi_tex_dias">Dias: 0</string>
    <string name="fc_idi_tex_textos">Textos: 0</string>
    <string name="fc_idi_tex_cartas">Cartas: 0</string>
    <string name="fc_idi_tex_palavrasUnicas">Palavras únicas: 0 (em construção)</string>

    <string name="fc_edt_negrito">N</string>
    <string name="fc_edt_italico">I</string>
    <string name="fc_edt_sublinahdo">S</string>



</resources>