<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.tccflashcards.activity.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_login_activity"
            app:destination="@id/loginActivity" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.tccflashcards.activity.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_PrincipalActivity"
            app:destination="@id/PrincipalActivity" />
    </fragment>

    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.tccflashcards.activity.LoginActivity"
        android:label="login"
        tools:layout="@layout/activity_login">

    </activity>

    <fragment
        android:id="@+id/EsqueciSenha"
        android:name="com.example.tccflashcards.activity.EsqueciSenhaFragment"
        android:label="@string/Esqueci_senha"
        tools:layout="@layout/fragment_esqueci_senha">
        <action
            android:id="@+id/action_EsqueciSenha_to_login_activity"
            app:destination="@id/loginActivity" />
    </fragment>

    <activity
        android:id="@+id/PrincipalActivity"
        android:name="com.example.tccflashcards.activity.PincipalActivity"
        android:label="Principal"
        tools:layout="@layout/activity_principal"/>
</navigation>